# ai-native-business-runtime-framework

./: .gitignore  AGENTS.md  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  runtime.schema.yaml
cli/: README.md  __init__.py  main.py  plan.py
docs/: README.md
docs/architecture/: README.md  cli.md  mcp-adapter.md  overview.md  runtime-generator.md  runtime.md
docs/guides/: README.md  advanced-usage.md  api-reference.md  configuration.md  domain-dsl.md  getting-started.md  plugins.md  security.md  troubleshooting.md  workflow-creation.md
docs/security/: deployment-isolation.md
examples/trade_crm_runtime/: README.md  requirements.txt  runtime.yaml
examples/trade_crm_runtime/app/: main.py
examples/trade_crm_runtime/app/domain/: customer.yaml  followup.yaml
examples/trade_crm_runtime/app/infrastructure/: __init__.py  database.py
examples/trade_crm_runtime/data/: .gitignore
examples/trade_crm_runtime/tests/: __init__.py  conftest.py
mcp_adapter/: README.md  __init__.py  client.py  config.py  exceptions.py  protocol.py  rate_limiter.py  transport.py
mcp_adapter/providers/: README.md  __init__.py  anthropic.py  base.py  custom.py  google.py  openai.py
runtime_core/: README.md
runtime_core/domain/: README.md
runtime_core/engine/: README.md  __init__.py  actions.py  core.py  executor.py  scheduler.py
runtime_core/runtime/: README.md
runtime_core/shared/: README.md
runtime_core/state/: README.md  manager.py
runtime_core/validation/: README.md  __init__.py  constraints.py  rules.py  schema.py  validator.py
runtime_generator/: README.md  __init__.py  config_generator.py  generator.py  prompts.py  templates.py
tests/: README.md  __init__.py  test_action_registry.py  test_constraint_engine.py  test_runtime_engine.py  test_runtime_generator.py  test_state_manager.py  test_templates.py
(+5 files in other folders)
